# workstream

./: .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .docstr.yaml  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_initial_baseline.py  0002_project_guide_foundation.py  0003_task_queue_assignment.py  (+34 more)
backend/app/: __init__.py  main.py
backend/migration_contracts/: __init__.py  service_identity_0023.py
backend/scripts/: api_contract_e2e.py  bootstrap_access_administrator.py  ci_test_shards.py  coverage_policy.py  legacy_actor_classification.py  run_isolated_tests.py  service_actor_identity_mapping.py  week1_api_e2e.py  week1_dry_run.py  week2_api_e2e.py
backend/tests/: artifact_store_helpers.py  assertion_helpers.py  conftest.py  test_actor_legacy_classification.py  test_actor_migration_tools.py  test_actors.py  test_agent_runtime.py  test_alembic.py  test_api_contract_e2e.py  test_api_controls.py  test_api_rate_controls.py  test_app.py  test_artifact_admission.py  test_artifact_architecture.py  test_artifact_cleanup_wiring.py  test_artifact_preparation.py  test_artifact_store_conformance.py  test_artifacts.py  test_assertion_helpers.py  test_audit.py  test_auth.py  test_authorization.py  test_aws_credential_isolation.py  test_checkers.py  test_ci_test_shards.py  test_config.py  test_coverage_contract.py  test_db_session.py  test_external_service_adapters.py  test_isolated_database_runner.py  test_local_artifact_store.py  test_outbox.py  test_projects.py  test_s3_artifact_store.py  test_tasks.py
(+973 files in other folders)
